--- a/client/index.html
+++ b/client/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="https://domi.kr/img/icon_48.png" sizes="48x48">
     <link rel="icon" type="image/png" href="https://domi.kr/img/icon_196.png" sizes="196x196">
     <title>Dnote</title>
